Reorganize code base and update tests accordingly to pass verify